have image show fix on firefox browser with broken svg animation

--- a/app/assets/stylesheets/skills.scss
+++ b/app/assets/stylesheets/skills.scss
@@ -25,6 +25,7 @@
   display: inline-block;
 }
 
+.skill-icon img,
 .skill-icon{
   opacity: 0.8;
   height: 120px;
